--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-openai>=1.52
-python-dotenv>=1.0
-requests>=2.32
-trafilatura>=1.9
-beautifulsoup4>=4.12
-playwright>=1.47
-pydantic>=2.9
-docxtpl>=0.16
-simhash>=2.1.2
-streamlit>=1.37
-python-graphviz
+streamlit==1.36.0
+openai>=1.51.0
+requests>=2.32.3
+beautifulsoup4>=4.12.3
+jinja2>=3.1.4
+python-dotenv>=1.0.1
+pydantic>=2.7.0
+typing_extensions>=4.12.2
