--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.36.0
-openai>=1.51.0
-requests>=2.32.3
-beautifulsoup4>=4.12.3
-jinja2>=3.1.4
-python-dotenv>=1.0.1
-pydantic>=2.7.0
-typing_extensions>=4.12.2
+streamlit>=1.36
+openai>=1.51
+requests>=2.32
+beautifulsoup4>=4.12
+jinja2>=3.1
+python-dotenv>=1.0
+graphviz>=0.20
